[gd_scene load_steps=2 format=3 uid="uid://dbv28newygviw"]

[ext_resource type="Script" uid="uid://b75hcndvrnbgw" path="res://scripts/ui/menus/character_creation.gd" id="1_qqbes"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqbes")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3647059, 0.5921569, 0.5176471, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 50.0
offset_right = 67.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Character Creation"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -230.0
offset_right = 236.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Player Name:"

[node name="PlayerNameBox" type="LineEdit" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
placeholder_text = "MasterSlayer123"

[node name="Spacer" type="Control" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = " Create "

[node name="Spacer2" type="Control" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReturnButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="Spacer3" type="Control" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="VBoxContainer2/VBoxContainer/PlayerNameBox" to="." method="_on_player_name_box_text_changed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
